# Oh-my--paper

./: .gitignore  LICENSE  README.md  README.zh.md  index.html  main.tex  package-lock.json  package.json  vite.config.ts  论文AI提示词.md
.claude-plugin/: marketplace.json
.github/: release.yml
.pipeline/: .session-context.md
.viewerleaf/: project.json
.workflow/: README.md  decision-log.yaml  experiment-log.yaml  literature-bank.yaml  paper-issues.yaml  schema.md
docs/: code-review-report.md  journal-analysis-guide.md  journal-analysis-usage-guide.md  plugin-setup-guide.md
icons/: icon.icns
refs/: references.bib
scripts/: bump-version.mjs  install-paper-versioning.sh  omp-cleanup.sh  omp-version-install.sh  stage-sidecar.mjs  sync-research-skills.mjs
sections/: abstract.tex  experiments.tex  introduction.tex  method.tex
sidecar/: index.mjs  package-lock.json  package.json
skills/: research-catalog.json  research-scope.json
src/: App.tsx  index.css  main.tsx  pdfjs-viewer.d.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  desktop_menu.rs  lib.rs  main.rs  models.rs  schema.sql  state.rs
src-tauri/src/services/: agent.rs  cc_connect.rs  cli_agent.rs  compile.rs  compute_node.rs  experiment.rs  figure.rs  literature.rs  mod.rs  profile.rs  project.rs  provider.rs  research.rs  session_scan.rs  sidecar.rs  skill.rs  sync.rs  task_watcher.rs  terminal.rs  worker.rs
templates/: COMMANDS.md  autopilot-guide.md  feature-checklist.md
(+456 files in other folders)
